deploy: b30b9e76dabe2e72bb1be3e39f8db9fc1f888f64

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 <p><code>$ npm install --save zigbee-clusters</code></p>
 <h2>About Zigbee Clusters</h2>
 <p>A Zigbee cluster is an abstraction on top of the Zigbee protocol which allows implementing functionality for many types of devices. A list of all available clusters can be found in the Zigbee Cluster Library Specification <a href="https://etc.athom.com/zigbee_cluster_specification.pdf">section 2.2.</a>. If you are familiar with Z-Wave Command Classes, Zigbee clusters are very similar.</p>
-<h3>Cluster hierachy</h3>
+<h3>Cluster hierarchy</h3>
 <p>It is important to understand the structure of a Zigbee node:
 <a href="https://mermaid-js.github.io/mermaid-live-editor/#/edit/eyJjb2RlIjoiZ3JhcGggVERcbiAgQVtOb2RlXSAtLT4gQihFbmRwb2ludCAxKVxuICBBIC0tPiBEKEVuZHBvaW50IC4uLilcbiAgQiAtLT4gRShDbHVzdGVyIE9uT2ZmKVxuICBCIC0tPiBGKENsdXN0ZXIgTGV2ZWxDb250cm9sKVxuICBCIC0tPiBHKENsdXN0ZXIgLi4uKVxuICBFIC0tPiBIKENvbW1hbmQgJ3RvZ2dsZScpXG4gIEUgLS0-IEkoQ29tbWFuZCAnc2V0T24nKVxuICBFIC0tPiBKKEF0dHJpYnV0ZSAnb25PZmYnKSIsIm1lcm1haWQiOnsidGhlbWUiOiJkZWZhdWx0In0sInVwZGF0ZUVkaXRvciI6ZmFsc2V9"><img src="https://mermaid.ink/img/eyJjb2RlIjoiZ3JhcGggVERcbiAgQVtOb2RlXSAtLT4gQihFbmRwb2ludCAxKVxuICBBIC0tPiBEKEVuZHBvaW50IC4uLilcbiAgQiAtLT4gRShDbHVzdGVyIE9uT2ZmKVxuICBCIC0tPiBGKENsdXN0ZXIgTGV2ZWxDb250cm9sKVxuICBCIC0tPiBHKENsdXN0ZXIgLi4uKVxuICBFIC0tPiBIKENvbW1hbmQgJ3RvZ2dsZScpXG4gIEUgLS0-IEkoQ29tbWFuZCAnc2V0T24nKVxuICBFIC0tPiBKKEF0dHJpYnV0ZSAnb25PZmYnKSIsIm1lcm1haWQiOnsidGhlbWUiOiJkZWZhdWx0In0sInVwZGF0ZUVkaXRvciI6ZmFsc2V9" alt=""></a></p>
 <h3>Client/Server clusters</h3>
@@ -145,7 +145,7 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 </ul>
 <p>From the Zigbee Cluster Library Specification &quot;Typically, the entity that stores the attributes of a cluster is referred to as the server of that cluster and an entity that affects or manipulates those attributes is referred to as the client of that cluster.&quot; More information on this can be found in the Zigbee Cluster Library Specification <a href="https://etc.athom.com/zigbee_cluster_specification.pdf">section 2.2.2.</a>.</p>
 <h3>Bindings and bound clusters</h3>
-<p>The concept of server/client is important for the following reason. Nodes can be receivers of commands (i.e. servers), or senders of commands (i.e. clients), and sometimes both. An example on how to send a command to a node can be found <a href="#basic-communication-with-node">below</a>. Receiving commands from a node requires a binding to be made from the controller to the cluster on the node, and the implementation of a <code>BoundCluster</code> to receive and handle the incoming commands. For an example on implementing a <code>BoundCluster</code> see <a href="#implementing-a-bound-cluster">below</a>.</p>
+<p>The concept of server/client is important for the following reason. Nodes can be receivers of commands (i.e. servers), or senders of commands (i.e. clients), and sometimes both. An example on how to send a command to a node can be found <a href="#basic-communication-with-node">below</a>. Receiving commands from a node requires a binding to be made from the controller to the cluster on the node, and the implementation of a <code>BoundCluster</code> (i.e. server cluster) to receive and handle the incoming commands. For an example on implementing a <code>BoundCluster</code> see <a href="#implementing-a-bound-cluster">below</a>.</p>
 <h2>Usage</h2>
 <p>In order to communicate with a Zigbee node retrieve a <code>node</code> instance from <code>ManagerZigBee</code> and create a <code>ZCLNode</code> instance using that node. This step encapsulates the <code>node</code> with the Zigbee Clusters functionality and allows sending and receiving ZCL commands.</p>
 <h3>Basic communication with node</h3>
@@ -226,8 +226,10 @@ const COMMANDS = {
   toggle: { id: 2 },
   onWithTimedOff: {
     id: 66,
+    // Optional property that can be used to implement two commands with the same id but different directions. Both commands must have a direction property in that case. See lib/clusters/iasZone.js as example.
+    // direction: Cluster.DIRECTION_SERVER_TO_CLIENT
     args: {
-      onOffControl: ZCLDataTypes.uint8, // Use the `ZCLDataTypes` object to specifiy types
+      onOffControl: ZCLDataTypes.uint8, // Use the `ZCLDataTypes` object to specify types
       onTime: ZCLDataTypes.uint16,
       offWaitTime: ZCLDataTypes.uint16,
     },
