deploy: 87efc9d10476e76f3547e77994bb408c3600a348

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 <p>Make sure to take a look at the API documentation: <a href="https://athombv.github.io/node-zigbee-clusters">https://athombv.github.io/node-zigbee-clusters</a>.</p>
 <h2>Installation</h2>
 <p><code>$ npm install --save zigbee-clusters</code></p>
+<h2>Release</h2>
+<p>Merge to production and include <code>#patch</code>, <code>#minor</code> or <code>#major</code> in the PR/commit message. Or merge to production and run the &quot;Deploy&quot; workflow and provide a version bump parameter.</p>
 <h2>About Zigbee Clusters</h2>
 <p>A Zigbee cluster is an abstraction on top of the Zigbee protocol which allows implementing functionality for many types of devices. A list of all available clusters can be found in the Zigbee Cluster Library Specification <a href="https://etc.athom.com/zigbee_cluster_specification.pdf">section 2.2.</a>. If you are familiar with Z-Wave Command Classes, Zigbee clusters are very similar.</p>
 <h3>Cluster hierarchy</h3>
