--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 <p>Make sure to take a look at the API documentation: <a href="https://athombv.github.io/node-zigbee-clusters">https://athombv.github.io/node-zigbee-clusters</a>.</p>
 <h2>Installation</h2>
 <p><code>$ npm install --save zigbee-clusters</code></p>
+<h2>Breaking changes</h2>
+<p>v2.0.0</p>
+<ul>
+<li>Changed <code>Cluster.readAttributes</code> signature, attributes must now be specified as an array of strings.</li>
+</ul>
+<pre class="prettyprint source lang-js"><code>zclNode.endpoints[1].clusters.basic.readAttributes([&quot;modelId&quot;, &quot;manufacturerName&quot;]);
+</code></pre>
 <h2>Release</h2>
 <p>Merge to production and include <code>#patch</code>, <code>#minor</code> or <code>#major</code> in the PR/commit message. Or merge to production and run the &quot;Deploy&quot; workflow and provide a version bump parameter.</p>
 <h2>About Zigbee Clusters</h2>
@@ -153,67 +160,71 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 <h3>Basic communication with node</h3>
 <h2>Sending a command</h2>
 <p><code>/drivers/my-driver/device.js</code></p>
-<pre class="prettyprint source lang-js"><code>const Homey = require('homey');
-const { ZCLNode, CLUSTER } = require('zigbee-clusters');
-
-class MyDevice extends Homey.Device {
-    onInit() {
-        // Get ZigBeeNode instance from ManagerZigBee
-        this.homey.zigbee.getNode(this)
-          .then(async node => {
-            // Create ZCLNode instance
-            const zclNode = new ZCLNode(node);
-
-            // Send toggle command to onOff cluster on endpoint 1
-            await zclNode.endpoints[1].clusters[CLUSTER.ON_OFF.NAME].toggle();
-
-            // Send moveToLevel command to levelControl cluster on endpoint 1 and don't wait for
-            // the default response confirmation.
-            await zclNode.endpoints[1].clusters[CLUSTER.LEVEL_CONTROL.NAME].moveToLevel({
-              level: 100,
-              transitionTime: 2000
-            }, {
-              // This is an optional flag that disables waiting for a default response from the
-              // receiving node as a confirmation that the command is received and executed.
-              // You should only use this flag if the device does not follow the
-              // Zigbee specification and refuses to send a default response.
-              waitForResponse: true,
-
-              // This is an optional property that allows for adjusting the response
-              // timeout (25000ms) before the command is considered rejected.
-              timeout: 10000,
-            });
-          });
-    }
-}
-</code></pre>
-<h2>Receiving an attribute report</h2>
-<p><code>/drivers/my-driver/device.js</code></p>
-<pre class="prettyprint source lang-js"><code>const Homey = require('homey');
-const { ZCLNode, CLUSTER } = require('zigbee-clusters');
+<pre class="prettyprint source lang-js"><code>const Homey = require(&quot;homey&quot;);
+const { ZCLNode, CLUSTER } = require(&quot;zigbee-clusters&quot;);
 
 class MyDevice extends Homey.Device {
   onInit() {
     // Get ZigBeeNode instance from ManagerZigBee
-    this.homey.zigbee.getNode(this)
-      .then(async node => {
-        // Create ZCLNode instance
-        const zclNode = new ZCLNode(node);
+    this.homey.zigbee.getNode(this).then(async (node) => {
+      // Create ZCLNode instance
+      const zclNode = new ZCLNode(node);
 
-        // Configure reporting
-        await zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].configureReporting({
-          currentSaturation: {
-            minInterval: 0,
-            maxInterval: 300,
-            minChange: 1
-          }
-        });
+      // Send toggle command to onOff cluster on endpoint 1
+      await zclNode.endpoints[1].clusters[CLUSTER.ON_OFF.NAME].toggle();
 
-        // And listen for incoming attribute reports by binding a listener on the cluster
-        zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].on('attr.currentSaturation', (currentSaturation) => {
-          // handle reported attribute value
-        });
+      // Send moveToLevel command to levelControl cluster on endpoint 1 and don't wait for
+      // the default response confirmation.
+      await zclNode.endpoints[1].clusters[CLUSTER.LEVEL_CONTROL.NAME].moveToLevel(
+        {
+          level: 100,
+          transitionTime: 2000,
+        },
+        {
+          // This is an optional flag that disables waiting for a default response from the
+          // receiving node as a confirmation that the command is received and executed.
+          // You should only use this flag if the device does not follow the
+          // Zigbee specification and refuses to send a default response.
+          waitForResponse: true,
+
+          // This is an optional property that allows for adjusting the response
+          // timeout (25000ms) before the command is considered rejected.
+          timeout: 10000,
+        }
+      );
+    });
+  }
+}
+</code></pre>
+<h2>Receiving an attribute report</h2>
+<p><code>/drivers/my-driver/device.js</code></p>
+<pre class="prettyprint source lang-js"><code>const Homey = require(&quot;homey&quot;);
+const { ZCLNode, CLUSTER } = require(&quot;zigbee-clusters&quot;);
+
+class MyDevice extends Homey.Device {
+  onInit() {
+    // Get ZigBeeNode instance from ManagerZigBee
+    this.homey.zigbee.getNode(this).then(async (node) => {
+      // Create ZCLNode instance
+      const zclNode = new ZCLNode(node);
+
+      // Configure reporting
+      await zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].configureReporting({
+        currentSaturation: {
+          minInterval: 0,
+          maxInterval: 300,
+          minChange: 1,
+        },
       });
+
+      // And listen for incoming attribute reports by binding a listener on the cluster
+      zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].on(
+        &quot;attr.currentSaturation&quot;,
+        (currentSaturation) => {
+          // handle reported attribute value
+        }
+      );
+    });
   }
 }
 </code></pre>
@@ -244,13 +255,12 @@ const COMMANDS = {
 
 // Implement the OnOff cluster by extending `Cluster`
 class OnOffCluster extends Cluster {
-
   static get ID() {
     return 6; // The cluster id
   }
 
   static get NAME() {
-    return 'onOff'; // The cluster name
+    return &quot;onOff&quot;; // The cluster name
   }
 
   static get ATTRIBUTES() {
@@ -260,14 +270,12 @@ class OnOffCluster extends Cluster {
   static get COMMANDS() {
     return COMMANDS; // Returns the defined commands
   }
-
 }
 
 // Add the cluster to the clusters that will be available on the `ZCLNode`
 Cluster.addCluster(OnOffCluster);
 
 module.exports = OnOffCluster;
-
 </code></pre>
 <p>After a cluster is implemented it can be used on a <code>ZCLNode</code> instance like this:</p>
 <pre class="prettyprint source"><code>await zclNode.endpoints[1].clusters[CLUSTER.ON_OFF.NAME].toggle();
@@ -276,10 +284,9 @@ module.exports = OnOffCluster;
 <h3>Implementing a bound cluster</h3>
 <p>Zigbee nodes can send commands to Homey via bound clusters. This requires a binding to be created on a specific endpoint and cluster. Next, a <code>BoundCluster</code> implementation must be registered with the <code>ZCLNode</code> which implements handlers for the incomming commands:</p>
 <p><code>/lib/LevelControlBoundCluster.js</code></p>
-<pre class="prettyprint source lang-js"><code>const { BoundCluster } = require('zigbee-clusters');
+<pre class="prettyprint source lang-js"><code>const { BoundCluster } = require(&quot;zigbee-clusters&quot;);
 
 class LevelControlBoundCluster extends BoundCluster {
-
   constructor({ onMove }) {
     super();
     this._onMove = onMove;
@@ -295,25 +302,26 @@ class LevelControlBoundCluster extends BoundCluster {
 }
 
 module.exports = LevelControlBoundCluster;
-
 </code></pre>
 <p><code>/drivers/my-driver/device.js</code></p>
-<pre class="prettyprint source lang-js"><code>const LevelControlBoundCluster = require('../../lib/LevelControlBoundCluster');
+<pre class="prettyprint source lang-js"><code>const LevelControlBoundCluster = require(&quot;../../lib/LevelControlBoundCluster&quot;);
 
 // Register the `BoundCluster` implementation with the `ZCLNode`
-zclNode.endpoints[1].bind(CLUSTER.LEVEL_CONTROL.NAME, new LevelControlBoundCluster({
-  onMove: (payload) => {
-    // Do something with the received payload
-  },
-}));
+zclNode.endpoints[1].bind(
+  CLUSTER.LEVEL_CONTROL.NAME,
+  new LevelControlBoundCluster({
+    onMove: (payload) => {
+      // Do something with the received payload
+    },
+  })
+);
 </code></pre>
 <h3>Implementing a custom cluster</h3>
 <p>There are cases where it is required to implement a custom cluster, for example to handle manufacturer specific cluster implementations. Often these manufacturer specific cluster implementations are extensions of existing clusters. An example is the <code>IkeaSpecificSceneCluster</code> (<a href="https://github.com/athombv/com.ikea.tradfri-example/tree/master/lib/IkeaSpecificSceneCluster.js">complete implementation</a>):</p>
 <p><code>lib/IkeaSpecificSceneCluster.js</code></p>
-<pre class="prettyprint source lang-js"><code>const { ScenesCluster, ZCLDataTypes } = require('zigbee-clusters');
+<pre class="prettyprint source lang-js"><code>const { ScenesCluster, ZCLDataTypes } = require(&quot;zigbee-clusters&quot;);
 
 class IkeaSpecificSceneCluster extends ScenesCluster {
-
   // Here we override the `COMMANDS` getter from the `ScenesClusters` by
   // extending it with the custom command we'd like to implement `ikeaSceneMove`.
   static get COMMANDS() {
@@ -321,7 +329,7 @@ class IkeaSpecificSceneCluster extends ScenesCluster {
       ...super.COMMANDS,
       ikeaSceneMove: {
         id: 0x08,
-        manufacturerId: 0x117C,
+        manufacturerId: 0x117c,
         args: {
           mode: ZCLDataTypes.enum8({
             up: 0,
@@ -345,23 +353,19 @@ class IkeaSpecificSceneCluster extends ScenesCluster {
       },
     };
   }
-
 }
 
 module.exports = IkeaSpecificSceneCluster;
-
-
 </code></pre>
 <p><code>/drivers/my-driver/device.js</code></p>
-<pre class="prettyprint source lang-js"><code>const IkeaSpecificSceneCluster = require('../../lib/IkeaSpecificSceneCluster');
+<pre class="prettyprint source lang-js"><code>const IkeaSpecificSceneCluster = require(&quot;../../lib/IkeaSpecificSceneCluster&quot;);
 
 // Important: we have created a new `Cluster` instance which needs to be added before
 // it becomes available on any `ZCLNode` instance.
 Cluster.addCluster(IkeaSpecificSceneCluster);
 
 // Example invocation of custom cluster command
-zclNode.endpoints[1].clusters['scenes'].ikeaSceneMove({mode: 0, transitionTime: 10});
-
+zclNode.endpoints[1].clusters[&quot;scenes&quot;].ikeaSceneMove({ mode: 0, transitionTime: 10 });
 </code></pre>
 <p>This also works for <code>BoundClusters</code>, if a node sends commands to Homey using a custom cluster it is necessary to implement a custom <code>BoundCluster</code> and bind it to the <code>ZCLNode</code> instance. For an example check the implementation in the <code>com.ikea.tradfri</code> driver <a href="https://github.com/athombv/com.ikea.tradfri-example/tree/master/drivers/remote_control/device.js">remote_control</a>.</p>
 <h2>Contributing</h2>
